--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.4.5"
   }
 }
