--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shadcn-next-portfolio",
+  "name": "sebastian-cabrera",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -32,6 +32,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "sharp": "^0.33.3",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
