--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
+    "eslint-config-next": "^14.2.10",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.294.0",
     "nanoid": "^5.0.6",
-    "next": "14.0.3",
+    "next": "^14.2.10",
     "next-themes": "^0.2.1",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-countup": "^6.5.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.48.2",
